# tensor_serving

./: README.md
resource/: Dockerfile  build.sh  docker_serving_model.json  s_log.conf  server_configure.proto  serving_model.config  serving_model.json  standard_serving_model.json  start.sh
src/: CMakeLists.txt  main.cpp  test.cpp
src/service/: openvino_service_driver.cpp  openvino_service_driver.h  server_configure.pb.cc  server_configure.pb.h  service_base.cpp  service_base.h  service_common.cpp  service_common.h  service_driver.cpp  service_driver.h  tensorflow_service_driver.cpp  tensorflow_service_driver.h
src/tensor_proto/google/protobuf/: any.pb.cc  any.pb.h  wrappers.grpc.pb.h  wrappers.pb.cc  wrappers.pb.h
src/tensor_proto/tensorflow/core/example/: example.grpc.pb.h  example.pb.cc  example.pb.h  feature.grpc.pb.h  feature.pb.cc  feature.pb.h
src/tensor_proto/tensorflow/core/framework/: attr_value.pb.cc  attr_value.pb.h  function.pb.cc  function.pb.h  graph.pb.cc  graph.pb.h  node_def.pb.cc  node_def.pb.h  op_def.pb.cc  op_def.pb.h  resource_handle.pb.cc  resource_handle.pb.h  tensor.pb.cc  tensor.pb.h  tensor_shape.grpc.pb.h  tensor_shape.pb.cc  tensor_shape.pb.h  types.pb.cc  types.pb.h  variable.pb.cc  variable.pb.h  versions.pb.cc  versions.pb.h
src/tensor_proto/tensorflow/core/protobuf/: meta_graph.pb.cc  meta_graph.pb.h  saved_object_graph.pb.cc  saved_object_graph.pb.h  saver.pb.cc  saver.pb.h  struct.pb.cc  struct.pb.h  trackable_object_graph.pb.cc  trackable_object_graph.pb.h
src/tensor_proto/tensorflow_serving/apis/: classification.pb.cc  classification.pb.h  get_model_metadata.pb.cc  get_model_metadata.pb.h  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  input.grpc.pb.h  input.pb.cc  input.pb.h  model.pb.cc  model.pb.h  predict.pb.cc  predict.pb.h  prediction_service.grpc.pb.cc  prediction_service.grpc.pb.h  prediction_service.pb.cc  prediction_service.pb.h  regression.pb.cc  regression.pb.h
